<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nome_">Nome:</string>
    <string name="site_">Site:</string>
    <string name="endere_o_">Endereço:</string>
    <string name="telefone_">Telefone:</string>
    <string name="nome">Nome:</string>
    <string name="nota_">Nota:</string>
    <string name="gravar">Gravar</string>
    <string name="novo">Novo</string>
    <string name="_mapa">Mapa</string>
    <string name="provas">Provas</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="op_es">Opções</string>
    <string name="prefer_ncias">Preferências</string>
    <string name="baixar_provas">Baixar Provas</string>
    <string name="mais">Mais</string>

</resources>
